fix: 02-css-modules text color of card is too light on dark theme

--- a/02-css-modules/src/components/ProductCard/ProductCard.module.css
+++ b/02-css-modules/src/components/ProductCard/ProductCard.module.css
@@ -11,6 +11,7 @@
 	position: relative;
 	box-shadow: 0 3px 4px var(--shadow);
 	background-color: var(--light-color);
+	color: var(--card-text-color);
 }
 
 .cardContainer picture {
